updated comments and Code of Conduct

--- a/MySQL/Dockerfile
+++ b/MySQL/Dockerfile
@@ -1,5 +1,8 @@
+# mysql container to run database
 FROM mysql:latest
 COPY world.sql /tmp
 WORKDIR /tmp
+# copy database file to container entrypoint folder for automatic load
 COPY world.sql /docker-entrypoint-initdb.d
+# set mysql root password
 ENV MYSQL_ROOT_PASSWORD=example
