--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,12 @@
     <artifactId>SoftEngGroup2</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+<!--compiler settings-->
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-
+<!--adding mysql connector dependency -->
     <dependencies>
         <dependency>
             <groupId>mysql</groupId>
@@ -20,7 +21,7 @@
             <version>8.0.19</version>
         </dependency>
     </dependencies>
-
+<!-- build settings -->
     <build>
         <plugins>
             <plugin>
