--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
   app:
     build: .
     container_name: app1
+    volumes:
+      - mydata:/data
 
   # MySQL is is MySQL folder
   db:
@@ -14,3 +16,6 @@ services:
       - 3306:3306
     command: --default-authentication-plugin=mysql_native_password
     restart: always
+
+volumes:
+  mydata:
