--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,5 +17,20 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart: always
 
+  # PhpMyAdmin Docker container
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin
+    ports:
+      - 80:80
+    links:
+      - db
+    expose:
+      - "80"
+    environment:
+      - VIRTUAL_HOST=phpmyadmin.io
+      - PMA_USER=root
+      - PMA_PASSWORD=example
+
 volumes:
   mydata:
