we have a LOCALLY working unit test against db connection

--- a/MySQL/Dockerfile
+++ b/MySQL/Dockerfile
@@ -6,3 +6,4 @@ WORKDIR /tmp
 COPY world.sql /docker-entrypoint-initdb.d
 # set mysql root password
 ENV MYSQL_ROOT_PASSWORD=example
+EXPOSE 3306/tcp
