changed travis.yml to include unit test

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,9 @@ services:
 
 after_success:
   - docker-compose up --abort-on-container-exit
+
+before_script:
+  - mvn clean
+
+script:
+  - mvn test -Dtest=test.java.MyTest
