changed travis.yml to include unit test

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ before_script:
   - mvn clean
 
 script:
-  - mvn test -Dtest=test.java.MyTest
+  - mvn test -Dtest=com.napier.sem..test.java.MyTest
