--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ before_script:
   - mvn clean
 
 script:
-  - mvn test -Dtest=com.napier.sem.test.java.MyTest
+  - mvn test -Dtest=src.test.java.MyTest
