Attempting to setup test run in Travis again again again again again again again again again again

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
   - docker
 
 install:
-  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  - mvn install -Dmaven.javadoc.skip=true -B -V
 
 after_success:
   - docker-compose up --abort-on-container-exit
