Attempting to setup test run in Travis again again again again again again again again again again again

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ services:
   - docker
 
 install:
-  - mvn install -Dmaven.javadoc.skip=true -B -V
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
 after_success:
   - docker-compose up --abort-on-container-exit
 
-script:
+after_script:
   - mvn test
