Attempting to setup test run in Travis again again again again again again again again again again again again

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ after_success:
   - docker-compose up --abort-on-container-exit
 
 after_script:
-  - mvn test
+  - mvn test -Dtest=com.napier.sem.MyTest
