Attempting to setup test run in Travis again again again again again again again again again again again again again again again

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ services:
   - docker
 
 install:
+  - docker build -t database db/.
+  - docker run --rm -d -e MYSQL_ROOT_PASSWORD=example -p 33060:3306 database
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
 after_success:
