--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,11 @@ sudo: required
 
 language: java
 
-addons:
-  hosts:
-    - db
-
 services:
   - docker
 
 install:
-  - docker build -t database db/.
+  - docker build -t database MySQL/.
   - docker run --rm -d -e MYSQL_ROOT_PASSWORD=example -p 33060:3306 database
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
