--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,16 @@
 #travis file to run docker-compose
-sudo: required
+    sudo: required
 
-language: java
+    language: java
 
-services:
-  - docker
+    services:
+      - docker
 
-install:
-  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+    install:
+      - docker build -t database db/.
+      - docker run --rm -d -e MYSQL_ROOT_PASSWORD=example -p 33060:3306 database
+      - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
-after_success:
-  - docker-compose up --abort-on-container-exit
-  - mvn test -Dtest=com.napier.sem.MyTest
+    after_success:
+      - docker-compose up --abort-on-container-exit
+      - mvn test -Dtest=com.napier.sem.MyTest
