--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.napier.sem</groupId>
-    <artifactId>com.napier.sem</artifactId>
+    <artifactId>App</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 <!--compiler settings-->
