Added travis job staging for integration

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 #travis file to run docker-compose
-sudo: required
+sudo: false
 
 language: java
 
@@ -17,3 +17,26 @@ install:
 
 after_success:
   - docker-compose up --abort-on-container-exit
+
+before_script:
+  - mvn clean
+
+jobs:
+  include:
+    - stage: unit tests
+      install: skip
+      jdk: oraclejdk11
+      script: mvn test -Dtest=com.napier.sem.MyTest
+    - stage: integration tests
+      jdk: oraclejdk11
+      script: echo "Integration Tests"
+    - stage: deploy
+      install: skip
+      jdk: oraclejdk11
+      script: echo "Deploy"
+
+stages:
+  - unit tests
+  - integration tests
+  - name: deploy
+    if: branch = master
