unit test was failing on travis, investigating

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,11 +29,13 @@ jobs:
       script: mvn test -Dtest=com.napier.sem.MyTest
     - stage: integration tests
       jdk: oraclejdk11
-      script: echo "Integration Tests"
+      script: mvn test -Dtest=com.napier.sem.AppIntegrationTest
     - stage: deploy
       install: skip
       jdk: oraclejdk11
-      script: echo "Deploy"
+      script:
+        - mvn package -DskipTests=true -Dmaven.javadoc.skip=true
+        - docker-compose up --abort-on-container-exit
 
 stages:
   - unit tests
