--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ install:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
 after_success:
+  - mvn package -DskipTests=true -Dmaven.javadoc.skip=true
   - docker-compose up --abort-on-container-exit
 
 before_script:
